          to what our documentation states, when it says that import
          is basically "setup with a twist".

        New Features

        Bugs Fixed

        - monotone no longer asks to pick a branch from a set of branches
          of a revision in which all but one branch have been suspended
          (fixes monotone bug #29843)

        - monotone now tries harder to find the cancel hint in a commit
          message and only aborts if it can't find it anywhere
          (fixes monotone bug #30215)

        - The import command no longer warns about not being able
          to write out _MTN/options on --dry-run
          (fixes monotone bug #30225)

        Other

Sun Jun 13 22:13:53 UTC 2010

        0.48 release.

        Changes

        - Much more information is now passed to the editor when composing a
          commit message for a new revision. The Author, Date, Branch and
          Changelog values may now all be changed directly in the editor
          allowing new branches to be created without using the --branch option.
          Changes to other lines of this information must not be made or the
          commit will abort.

        - The edit_comment lua hook now only takes one argument which is the
          text to be passed to the editor to edit a commit. Existing hooks that
          override the default hook will need to be changed to work properly.

        - The long date/time format used by 'status', 'commit' and 'log' must
          be sufficient to preserve a date through a formatting and parsing
          cycle. The 'status' command now checks for this and warns if the
          format is unsuitable and 'commit' will refuse to operate with an
          unsuitable format.

        - The output of the 'status' and 'log' commands has changed to align
          with the new information displayed by 'commit' so that all three
          commands display revisions similarly.
