@@ -1,0 +1,4 @@
+function get_revision_cert_trust(signers, id, name, val)
+    return false
+end
+
